.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: ghcr.io/warps73/music-dl-front:1.3.0
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      containers:
        - name: api-node
          image: ghcr.io/warps73/music-dl-api:1.3.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
