.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api-node-service
spec:
  selector:
    app: api-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
