.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "nginx-basic-auth-secret"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ytdl.hopto.org
      secretName: ytdl-staging-tls
  rules:
    - host: ytdl.hopto.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-node-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
